added temporary latex files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,29 @@
 codegen/
 
 *.pyc
+
+
+# temporary latex files from report
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
