some more tests + added latex files to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,35 @@
 *.asv
 
 # coder output
+*.prj
 *.mexw64
 codegen/
 
 *.pyc
+
+
+# temporary latex files from report
+*.tex~
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
