Small changes in report and code docu.

--- a/report/makefile
+++ b/report/makefile
@@ -1,5 +1,5 @@
 
-report.pdf: report.tex references.bib sections/*.tex
+report.pdf: report.tex references.bib sections/*.tex images/*
 	pdflatex report.tex
 	bibtex report.aux
 	pdflatex report.tex
